@@ -17,6 +17,8 @@ export(generateNoise)
 export(getEntropy)
 export(getIntegerRandomWalk)
 export(getLoudness)
+export(getRMS)
+export(getRMSFolder)
 export(getRandomWalk)
 export(getRolloff)
 export(getSmoothContour)
