@@ -1,4 +1,4 @@
-# TODO: export reportTime; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
+# TODO: correct rms by dividing by windowing fun per frame in analyze(); write getLoudnessFolder (without plotting, like getRMSFolder); check the new functions in amplitude.R; streamline saving all plots a la ggsave: filename, path, different supported devices instead of only png(); automatic addition of pitch jumps at high temp in soundgen() (?)
 
 #' @import stats graphics utils grDevices
 #' @encoding UTF-8
